# goit-pythonweb-hw-06

./: README.md  alembic.ini  alembic_init_migrations.sh  classes_manage.py  my_select.py  pyproject.toml  run_postgres.sh  seed.py  session.py  stop_postgres.sh
